--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                     <em>desnvolvimento de sistemas web</em>. Apartir daí o primeiro passo foi entrar para faculdade. Mas
                     com a sensação de que só a faculdade não me daria o conhecimento necessário, comecei a investir em
                     cursos paralelos. Hoje estou no 4° semestre da faculdade, com diversos cursos concluídos e outros em
-                    andamento. Tenho em mente que esta área exije um aprendizado contínuo pois está em consante mutação
+                    andamento. Tenho em mente que esta área exije um aprendizado contínuo pois está em constante mutação
                     e evolução, por isso dedico a maior parte do meu tempo livre à buscar mais conhecimento sobre esta área.</p>
             </div>
             <div id="contatos">
                 <h2>Contatos</h2>
-                <p>Selecione um contato abaixo.</p>
+                <p>Selecione um dos contato abaixo.</p>
                 <a href="https://github.com/RonaldoBilhar" target="blank"><img src="./images/github.png" alt=""></a>
                 <a href="mailto:ronaldo_bilhar@hotmail.com" target="blank"><img src="./images/email.png" alt=""></a>
                 <a href="https://www.instagram.com/bilhar_ronaldo/" target="blank"><img src="./images/instagram.png" alt=""></a>
